Flink-TornadoVM/null/var/opencl-logs/device-2-0/s0.t0-reduce.log
<kernel>:21:5: error: use of undeclared identifier 'slots'
    slots[0] = (ulong) -26891;
    ^